--- a/package.json
+++ b/package.json
@@ -1,49 +1,58 @@
 {
   "name": "svelte-select",
-  "version": "4.4.7",
+  "version": "5.0.0-alpha.10",
   "repository": "https://rob-balfre@github.com/rob-balfre/svelte-select.git",
   "description": "A <Select> component for Svelte apps",
-  "svelte": "src/index.js",
-  "module": "dist/index.mjs",
-  "main": "dist/index.js",
-  "types": "./src/index.d.ts",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -cw",
-    "prepublishOnly": "npm run build",
-    "test": "node test/runner.js | tap-dot",
-    "test:browser": "npm run build && serve test/public",
-    "test:playwright": "playwright test",
-    "gen:docs": "node docs/generate_theming_variables_md.js",
-    "pretest": "npm run build"
+    "dev": "svelte-kit dev --host",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview",
+    "dev-tests": "rollup -cw",
+    "test:browser": "sirv test/public -p 3000 --dev",
+    "gen:docs": "node docs/generate_theming_variables_md.cjs",
+    "preprepare": "node src/remove-styles.cjs",
+    "prepare": "svelte-kit package",
+    "postprepare": "node src/post-prepare.cjs && npm run gen:docs",
+    "release": "release-it"
   },
   "devDependencies": {
-    "@babel/polyfill": "7.12.1",
-    "@playwright/test": "1.16.2",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@sveltejs/kit": "1.0.0-next.260",
+    "autoprefixer": "^10.4.2",
+    "cross-env": "^7.0.3",
     "find-in-files": "^0.5.0",
-    "playwright-chromium": "1.16.2",
-    "port-authority": "^1.1.2",
-    "puppeteer": "^10.4.0",
-    "rollup": "^2.58.3",
+    "prettier": "~2.5.1",
+    "prettier-plugin-svelte": "^2.6.0",
+    "release-it": "^14.12.4",
+    "rollup": "^2.67.0",
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-serve": "1.1.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "sirv": "^1.0.18",
-    "svelte": "^3.44.0",
-    "tap-diff": "^0.1.1",
-    "tap-dot": "^2.0.0",
-    "tape-modern": "^1.1.2"
+    "sirv-cli": "^2.0.2",
+    "svelte": "^3.46.4",
+    "svelte-preprocess": "^4.10.2",
+    "svelte-tiny-virtual-list": "^1.1.7",
+    "svelte2tsx": "^0.5.2",
+    "tape-modern": "^1.1.2",
+    "typescript": "^4.5.5"
   },
-  "author": "rob-balfre",
-  "license": "LIL",
+  "author": "Robert Balfré <rob.balfre@gmail.com> (https://github.com/rob-balfre)",
+  "license": "ISC",
   "keywords": [
     "svelte"
   ],
-  "files": [
-    "src",
-    "dist"
-  ]
+  "release-it": {
+    "hooks": {
+      "after:bump": "npm run prepare"
+    },
+    "github": {
+      "release": false
+    },
+    "npm": {
+      "publishPath": "./package"
+    }
+  },
+  "type": "module"
 }
